--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,10 +18,13 @@
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.6",
-    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "happy-dom": "^2.46.3",
     "sass": "1.32.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vitest": "^0.6.0",
     "vue-tsc": "^0.29.8"
   },
   "packageManager": "yarn@3.2.0"
